# balzac

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  lefthook.yml  mise.toml
.github/workflows/: release-plz.yml  release.yml  tests.yml
example/: balzac.toml  package.json  vite.config.js
example/content/posts/: test.md
example/pages/: index.hbs
example/pages/posts/: details.hbs
src/: cli.rs  collection.rs  config.rs  context.rs  hooks.rs  lib.rs  main.rs  renderer.rs  sitemap.rs  vite.rs
tests/: integration_tests.rs
