[package]
name = "balzac"
version = "0.1.3"
description = "A blazingly fast static site generator"
license = "MIT"
homepage = "https://balzac.rs"
repository = "https://github.com/getbalzac/balzac"
edition = "2024"
readme = "README.md"
exclude = [
    "dist/*",
    "pages/*"
]

[dependencies]
colog = "1.4.0"
gray_matter = "0.3.2"
handlebars = "6.3.2"
log = "0.4.29"
markdown = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
shell-words = "1.1"
toml = "0.9.10"

[dev-dependencies]
tempfile = "3.10"
