[package]
name = "balzac"
version = "0.1.9"
description = "A blazingly fast static site generator"
license = "MIT"
homepage = "https://balzac.rs"
repository = "https://github.com/getbalzac/balzac"
edition = "2024"
readme = "README.md"
exclude = [
    "dist/*",
    "pages/*",
    "example/*"
]

[dependencies]
clap = {version = "4.5.54", features = ["cargo"]}
colog = "1.4.0"
comrak = "0.28"
handlebars = "6.3.2"
log = "0.4.29"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
shell-words = "1.1"
toml = "0.9.10"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
